--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "yangrh4",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.3.4"
+    "axios": "^1.3.4",
+    "express": "^4.18.2",
+    "openai": "^3.2.1",
+    "openapi": "^1.0.1",
+    "sqlite3": "^5.1.4",
+    "vue": "^3.2.47"
   }
 }
