--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "express": "^4.18.2",
     "openai": "^3.2.1",
     "openapi": "^1.0.1",
-    "sqlite3": "^5.1.4",
-    "vue": "^3.2.47"
+    "sqlite3": "^5.1.4"
   }
 }
